rest generator: (dictionary) hashmap support; invariant violation support in problem detail responses
