# argentum_user/rest/src/dto/schema/mod.rs
@@ -2,6 +2,8 @@ mod problem_detail;
 mod user;
 mod user_name;
 mod violation;
+mod violation_errors;
+mod violation_items;
 
 pub use problem_detail::ProblemDetail;
 pub use problem_detail::ProblemDetailRaw;
@@ -11,3 +13,7 @@ pub use user_name::UserName;
 pub use user_name::UserNameRaw;
 pub use violation::Violation;
 pub use violation::ViolationRaw;
+pub use violation_errors::ViolationErrors;
+pub use violation_errors::ViolationErrorsRaw;
+pub use violation_items::ViolationItems;
+pub use violation_items::ViolationItemsRaw;
