# argentum_user/rest/src/dto/schema/violation_items.rs
@@ -1,0 +1,57 @@
+use crate::dto::schema::Violation;
+use crate::dto::schema::ViolationRaw;
+use argentum_rest_infrastructure::data_type::DeserializableSchemaRaw;
+use argentum_rest_infrastructure::data_type::SerializableBody;
+use argentum_standard_business::invariant_violation::{
+    InvariantResult, ViolationArray, ViolationItem, Violations,
+};
+use std::collections::HashMap;
+
+#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
+pub struct ViolationItems(HashMap<String, Violation>);
+
+impl ViolationItems {
+    pub fn new(items: HashMap<String, Violation>) -> Self {
+        Self(items)
+    }
+}
+
+impl SerializableBody for ViolationItems {}
+
+impl DeserializableSchemaRaw<'_> for ViolationItems {
+    type Raw = ViolationItemsRaw;
+
+    fn try_from_raw(raw_list: Self::Raw) -> InvariantResult<Self> {
+        let mut argentum_violations: ViolationArray = vec![];
+
+        let mut items = HashMap::<String, Violation>::new();
+        for (key, raw) in raw_list.0 {
+            match raw {
+                Some(r) => match Violation::try_from_raw(r) {
+                    Ok(item) => {
+                        items.insert(key, item);
+                    }
+                    Err(e) => {
+                        argentum_violations.push(e);
+                    }
+                },
+                None => argentum_violations.push(Violations::new(
+                    vec!["Array item should not be None".to_string()],
+                    None,
+                )),
+            };
+        }
+
+        if argentum_violations.is_empty() {
+            Ok(Self::new(items))
+        } else {
+            Err(Violations::new(
+                vec!["wrong data for ViolationItems".to_string()],
+                Some(ViolationItem::Array(argentum_violations)),
+            ))
+        }
+    }
+}
+
+#[derive(serde::Deserialize)]
+pub struct ViolationItemsRaw(HashMap<String, Option<ViolationRaw>>);
